// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders large 1`] = `
<ResponsiveSomeComponent
  responsiveSize="large"
>
  <SomeComponent
    responsiveSize="large"
  >
    <div
      data-sz="large"
    >
      hello world
    </div>
  </SomeComponent>
</ResponsiveSomeComponent>
`;

exports[`renders medium 1`] = `
<ResponsiveSomeComponent
  responsiveSize="large"
>
  <SomeComponent
    responsiveSize="large"
  >
    <div
      data-sz="large"
    >
      hello world
    </div>
  </SomeComponent>
</ResponsiveSomeComponent>
`;

exports[`renders medium 2`] = `
<ResponsiveSomeComponent
  responsiveSize="large"
>
  <SomeComponent
    responsiveSize="medium"
  >
    <div
      data-sz="medium"
    >
      hello world
    </div>
  </SomeComponent>
</ResponsiveSomeComponent>
`;
